+ Added media tag for fixing hamburger on mobile + Fixed about content

--- a/css/media-tags.css
+++ b/css/media-tags.css
@@ -452,7 +452,7 @@ MEDIA TAGS
 
     #menu {
         margin-left: -10vw;
-        margin-top: 100vh;
+        /* margin-top: 100vh; */
     }
 
     #menu li {
